samples/_failures_safe/1760886205_7d3239_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_d9798348.c: In function ‘matrix_determinant’:
./samples/SAFE/__tmp_d9798348.c:122:9: error: expected expression at end of input
  122 |         double sub_det = matrix_determinant(&
      |         ^~~~~~
./samples/SAFE/__tmp_d9798348.c:122:9: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_d9798348.c:122:9: error: expected declaration or statement at end of input
